--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "profinityfilter",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "localStorage": "^1.0.4",
     "nodemon": "^3.1.0"
   }
 }
